[gd_scene load_steps=4 format=3 uid="uid://ccwxgiqkeocda"]

[ext_resource type="Texture2D" uid="uid://b3uw67e5q1pql" path="res://assets/furniture/kitchenCabinetUpperDouble_SE.png" id="2_glqiy"]
[ext_resource type="PackedScene" uid="uid://du4da5rtvhbd1" path="res://scenes/items/RiceJar/rice_jar.tscn" id="2_ivvak"]
[ext_resource type="Script" path="res://scenes/stations/cabinet/area.gd" id="3_n83yg"]

[node name="CabinetUpper" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 2

[node name="CabinetUpperSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_glqiy")

[node name="RiceJar" parent="CabinetUpperSprite" instance=ExtResource("2_ivvak")]
position = Vector2(10, -7)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(18, -22, 36, -4, -8, 28, -25, 10)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitorable = false
priority = 1
script = ExtResource("3_n83yg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-7, -7)
polygon = PackedVector2Array(4, 34, 27, 17, 36, 27, 15, 44)

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
